--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+    width: 250px;
+    margin: 50px;
+    text-align: center;
+    background-color: #ffdb7a;
+    color: white;
+    font-size: 19px;
+    border: 1px solid #ffdb7a;
+    padding: 15px;
+    border-radius: 5px;
+    font-weight: 800;
+    letter-spacing: 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+img { 
+    display: block;
+    margin: 10px auto;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 15px;
+}   
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+figcaption {
+    margin-top: 15px;
 }
