--- a/src/App.css
+++ b/src/App.css
@@ -4,28 +4,35 @@
   box-sizing: border-box;
 }
 
-.card {
-    width: 250px;
-    margin: 50px;
-    text-align: center;
-    background-color: #ffdb7a;
-    color: white;
-    font-size: 19px;
-    border: 1px solid #ffdb7a;
-    padding: 15px;
-    border-radius: 5px;
-    font-weight: 800;
-    letter-spacing: 1px;
+.card-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 260px);
+  justify-content: space-around;
+  grid-gap: 20px;
+  border: 1px solid red;
 }
 
-img { 
-    display: block;
-    margin: 10px auto;
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 15px;
-}   
+.card {
+  text-align: center;
+  background-color: #ffdb7a;
+  color: white;
+  font-size: 19px;
+  border: 1px solid #ffdb7a;
+  padding: 15px;
+  border-radius: 5px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+
+img {
+  display: block;
+  margin: 10px auto;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 15px;
+}
 
 figcaption {
-    margin-top: 15px;
+  margin-top: 15px;
 }
