--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,19 @@ html {
     rgba(4, 4, 4, 0.8295693277310925) 18%,
     rgba(8, 7, 7, 1) 100%
   );
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  overflow: auto;
 }
 
 .header {
@@ -43,21 +56,23 @@ html {
 .card-container {
   width: 100%;
   display: grid;
-  padding: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 280px));
+  padding: 15px 20px;
+  margin-top: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 270px));
   justify-content: space-around;
-  grid-gap: 10px;
+  column-gap: 10px;
+  row-gap: 20px;
 }
 
 .card {
   text-align: center;
   color: white;
-  outline: none; 
+  outline: none;
   cursor: pointer;
   font-size: 19px;
   margin-bottom: 20px;
-  padding: 15px;
-  border-radius: 5px;
+  padding: 20px;
+  border-radius: 8px;
   font-weight: 800;
   letter-spacing: 1px;
 }
@@ -72,4 +87,12 @@ img {
 
 figcaption {
   margin-top: 15px;
+}
+
+footer {
+  margin: 10px 15px;
+}
+
+a {
+  color: white;
 }
